tests/valid/trait/method_call_generic_trait_explicit_ufcs.facet
trait Into<T> {
  fn into(self: Self) -> T;
}

impl Into<unrestricted isize> for unrestricted isize {
  fn into(self: Self) -> unrestricted isize {
    self
  }
}

fn main(x: unrestricted isize) -> unrestricted isize {
  (<unrestricted isize as Into<unrestricted isize>>::into x)
}
